Доделан мессенждер (Осталось добавить только markdown)

--- a/Tests/messenger/index.html
+++ b/Tests/messenger/index.html
@@ -4,276 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Application</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-      defer
-    ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div
-      x-data="chatApp()"
-      class="flex h-screen w-screen bg-[#fff] font-[Inter]"
-    >
-      <!-- Contacts sidebar -->
-      <div class="w-[400px] border-r-[1px] border-[#D2D2D2] flex flex-col">
-        <div class="p-[16px] border-b-[1px] border-[#D2D2D2]">
-          <div class="relative">
-            <input
-              type="text"
-              x-model="searchTerm"
-              placeholder="Search contacts..."
-              class="w-full h-[40px] bg-[#D9D9D9] rounded-[10px] px-[16px] text-[14px] outline-none"
-            />
-          </div>
-        </div>
-        <div class="flex-1 overflow-y-auto">
-          <template x-for="contact in filteredContacts()" :key="contact.id">
-            <div
-              class="p-[16px] border-b-[1px] border-[#D2D2D2] flex items-center cursor-pointer hover:bg-[#f5f5f5]"
-              :class="{'bg-[#f0f0f0]': selectedContact && selectedContact.id === contact.id}"
-              @click="selectContact(contact)"
-            >
-              <img
-                :src="contact.avatar"
-                class="w-[45px] h-[45px] rounded-full bg-[#D9D9D9]"
-              />
-              <div class="ml-[16px] flex-1">
-                <div class="flex justify-between">
-                  <h3
-                    class="font-medium text-[16px]"
-                    x-text="contact.name"
-                  ></h3>
-                  <span
-                    class="text-[12px] text-[#999]"
-                    x-text="contact.messages[contact.messages.length-1].time"
-                  ></span>
-                </div>
-                <div class="flex justify-between">
-                  <p
-                    class="text-[14px] text-[#666] truncate max-w-[200px]"
-                    x-text="contact.lastMessage"
-                  ></p>
-                  <div
-                    class="w-[10px] h-[10px] rounded-full"
-                    :class="contact.status === 'online' ? 'bg-[#7DA67B]' : 'bg-[#999]'"
-                  ></div>
-                </div>
-              </div>
-            </div>
-          </template>
-        </div>
-      </div>
-
-      <!-- Chat area -->
-      <div class="flex-1 flex flex-col">
-        <!-- Contact header -->
-        <div
-          x-show="selectedContact"
-          class="flex items-center p-[16px] border-b-[1px] border-[#D2D2D2]"
-        >
-          <img
-            x-bind:src="selectedContact?.avatar"
-            class="w-[45px] h-[45px] rounded-full bg-[#D9D9D9]"
-          />
-          <div class="ml-[16px]">
-            <h2
-              class="font-medium text-[16px]"
-              x-text="selectedContact?.name"
-            ></h2>
-            <div
-              x-bind:style="{ color: selectedContact?.status === 'online' ? '#7DA67B' : '#999' }"
-              class="text-[14px]"
-              x-text="selectedContact?.status"
-            ></div>
-          </div>
-        </div>
-
-        <!-- Messages area -->
-        <div
-          class="flex-1 overflow-y-auto p-[16px]"
-          x-show="selectedContact"
-          id="messages-container"
-        >
-          <template
-            x-for="message in selectedContact?.messages"
-            :key="message.id"
-          >
-            <div
-              class="mb-[16px] max-w-[70%]"
-              :class="message.isSent ? 'ml-auto' : 'mr-auto'"
-            >
-              <div
-                class="p-[12px] rounded-[10px]"
-                :class="message.isSent ? 'bg-[#C3C3CF] text-black' : 'bg-[#D9D9D9] text-black'"
-              >
-                <p class="text-[14px]" x-text="message.text"></p>
-              </div>
-              <div
-                class="text-[12px] text-[#999] mt-[4px]"
-                :class="message.isSent ? 'text-right' : 'text-left'"
-                x-text="message.time"
-              ></div>
-            </div>
-          </template>
-        </div>
-
-        <!-- Empty state -->
-        <div
-          x-show="!selectedContact"
-          class="flex-1 flex items-center justify-center text-[#999]"
-        >
-          Select a contact to start messaging
-        </div>
-
-        <!-- Message input -->
-        <div
-          x-show="selectedContact"
-          class="p-[16px] border-t-[1px] border-[#D2D2D2]"
-        >
-          <div class="flex">
-            <input
-              type="text"
-              x-model="newMessage"
-              x-on:keyup="if($event.key === 'Enter') sendMessage()"
-              placeholder="Write a message..."
-              class="flex-1 h-[35px] bg-[#D9D9D9] rounded-[10px] px-[16px] text-[14px] outline-none"
-            />
-            <button
-              x-on:click="sendMessage()"
-              class="ml-[16px] px-[16px] bg-[#C3C3CF] text-[14px] rounded-[10px]"
-            >
-              Send
-            </button>
-          </div>
-        </div>
-      </div>
+    <div class="telegram-input-container">
+      <textarea 
+        class="telegram-input" 
+        placeholder="Напишите сообщение..." 
+        rows="1"
+      ></textarea>
     </div>
-
-    <script>
-      function chatApp() {
-        return {
-          contacts: [
-            {
-              id: 1,
-              name: "John Smith",
-              status: "online",
-              avatar: "https://placehold.co/100x100",
-              lastMessage: "Hey there!",
-              messages: [
-                { id: 1, text: "Hey there!", time: "10:30 AM", isSent: false },
-                {
-                  id: 2,
-                  text: "Hi! How are you?",
-                  time: "10:31 AM",
-                  isSent: true,
-                },
-                {
-                  id: 3,
-                  text: "Doing great, thanks!",
-                  time: "10:32 AM",
-                  isSent: false,
-                },
-              ],
-            },
-            {
-              id: 2,
-              name: "Sarah Wilson",
-              status: "offline",
-              avatar: "https://placehold.co/100x100",
-              lastMessage: "See you tomorrow",
-              messages: [
-                {
-                  id: 1,
-                  text: "See you tomorrow",
-                  time: "9:30 AM",
-                  isSent: false,
-                },
-                {
-                  id: 2,
-                  text: "Looking forward to it!",
-                  time: "9:31 AM",
-                  isSent: true,
-                },
-              ],
-            },
-            {
-              id: 3,
-              name: "Mike Johnson",
-              status: "online",
-              avatar: "https://placehold.co/100x100",
-              lastMessage: "Thanks for the help",
-              messages: [
-                {
-                  id: 1,
-                  text: "Thanks for the help",
-                  time: "8:30 AM",
-                  isSent: false,
-                },
-                { id: 2, text: "Anytime!", time: "8:31 AM", isSent: true },
-              ],
-            },
-          ],
-          selectedContact: null,
-          newMessage: "",
-          searchTerm: "",
-
-          filteredContacts() {
-            return this.contacts.filter((contact) =>
-              contact.name
-                .toLowerCase()
-                .includes(this.searchTerm.toLowerCase()),
-            );
-          },
-
-          selectContact(contact) {
-            this.selectedContact = contact;
-            // Scroll to bottom of messages when selecting a contact
-            this.$nextTick(() => {
-              const messagesContainer =
-                document.getElementById("messages-container");
-              if (messagesContainer) {
-                messagesContainer.scrollTop = messagesContainer.scrollHeight;
-              }
-            });
-          },
-
-          sendMessage() {
-            if (!this.newMessage.trim() || !this.selectedContact) return;
-
-            const now = new Date();
-            const timeString = now.toLocaleTimeString("en-US", {
-              hour: "numeric",
-              minute: "numeric",
-            });
-
-            const newMsg = {
-              id: this.selectedContact.messages.length + 1,
-              text: this.newMessage,
-              time: timeString,
-              isSent: true,
-            };
-
-            this.selectedContact.messages.push(newMsg);
-            this.selectedContact.lastMessage = this.newMessage;
-            this.newMessage = "";
-
-            // Scroll to bottom after sending message
-            this.$nextTick(() => {
-              const messagesContainer =
-                document.getElementById("messages-container");
-              if (messagesContainer) {
-                messagesContainer.scrollTop = messagesContainer.scrollHeight;
-              }
-            });
-          },
-        };
-      }
-    </script>
+    <script src="./script.js"></script>
   </body>
 </html>
